// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers counter should handle DECREMENT_COUNTER 1`] = `
Object {
  "counter": 0,
}
`;

exports[`reducers counter should handle INCREMENT_COUNTER 1`] = `
Object {
  "counter": 2,
}
`;

exports[`reducers counter should handle initial state 1`] = `
Object {
  "counter": 0,
  "typing": Object {
    "text": "demo",
    "typingText": "",
  },
}
`;

exports[`reducers counter should handle unknown action type 1`] = `
Object {
  "counter": 1,
}
`;
